# vidutil

./: README.md  makefile  pyproject.toml  requirements.txt  setup.py
tests/: test_encoder.py  test_memory.py
vidutil/: encoder.py  memory.py
